--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ click==8.1.8
 dnspython==2.7.0
 email-validator==2.2.0
 flask==3.1.1
+flask-sqlalchemy==3.1.1
 flask-wtf==1.2.2
 idna==3.10
 importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
 MarkupSafe==3.0.2
+sqlalchemy==2.0.42
+typing-extensions==4.14.1
 werkzeug==3.1.3
 wtforms==3.2.1
 zipp==3.23.0
