--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+bcrypt==4.3.0
 blinker==1.9.0
 click==8.1.8
 dnspython==2.7.0
 email-validator==2.2.0
 flask==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.2
 idna==3.10
