--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ importlib-metadata==8.7.0
 itsdangerous==2.2.0
 jinja2==3.1.6
 MarkupSafe==3.0.2
+pillow==11.3.0
 sqlalchemy==2.0.42
 typing-extensions==4.14.1
 werkzeug==3.1.3
